--- a/css/shim.css
+++ b/css/shim.css
@@ -53,3 +53,13 @@ img {
 /*     content: "<"attr(name)">"; */
 /*     font-weight: bold; */
 /* } */
+
+.warning {
+    background-color: #282828;
+}
+
+@media (prefers-color-scheme: light) {
+    .warning {
+        background-color: #fbf1c7;
+    }
+}
