--- a/css/snow.css
+++ b/css/snow.css
@@ -12,12 +12,12 @@
 }
 
 .snowframe {
-    background-color: #282828;
+    background-color: #1d2021;
 }
 
 @media (prefers-color-scheme: light) {
     .snowframe {
-		    background-color: #fbf1c7;
+		    background-color: #f9f5d7;
     }
 }
 
